# SensorsCalibration

./: .gitmodules  run_docker.sh
lidar2camera/manual_calib/: CMakeLists.txt  calibration.xml
lidar2camera/manual_calib/data/: test.py
lidar2camera/manual_calib/docker/: Dockerfile  run.sh
lidar2camera/manual_calib/include/: assert_msg.h  calibrator.h  extrinsic_param.hpp  extrinsics.h  gui.h  intrinsic_param.hpp  intrinsics.h  intrinsics.hpp  projector.h  projector_lidar.hpp
lidar2camera/manual_calib/src/: calibrator.cpp  gui.cpp  projector.cpp  run.cpp  run_lidar2camera.cpp  test.cpp
